# Titan-Vfs

./: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
include/Titan-Vfs/: IFile.h  IFileSystem.h  MemoryFileSystem.hpp  NativeFile.hpp  NativeFileSystem.hpp  VirtualFileSystem.hpp  ZipFile.hpp  ZipFileSystem.hpp
include/vfspp/: FileInfo.hpp  Global.h  MemoryFile.hpp  NativeFileSystem.hpp  StringUtils.hpp  VirtualFileSystem.hpp  ZipFileSystem.hpp
